--- a/templates/style.css
+++ b/templates/style.css
@@ -1,5 +1,15 @@
+/*------------CHANGE LOG---------------*/
+
+
+/* Changed code footer
+
+*/
+
+
 /*------------INTRO---------------*/
-    /*
+
+
+/*
 
     *   Excessive commenting is used to support beginners coding and show of understanding.
 
@@ -22,251 +32,307 @@
 
         */
 
-/* ------------BASE-------------------*/
-    /* base skin */
-    html {
-        font-family: Helvetica Neue, Helvetica, Arial;
-        font-size: 16px;
-        margin: 0px;
-        height: 100%;
-    }
 
-    body {
-        margin: 0px;
-        min-height:100%;
-        position:relative;
-        padding-bottom:[footer-height]
-    }
+/* ------------BASE-------------------*/
+
+
+/* base skin */
+
+html {
+    font-family: Helvetica Neue, Helvetica, Arial;
+    font-size: 16px;
+    margin: 0px;
+    height: 100%;
+}
+
+body {
+    margin: 0px;
+    min-height: 100%;
+    position: relative;
+    padding-bottom: [footer-height]
+}
+
 
 /* -----------LAYOUT------------------*/
 
-        /*Box-sizing-property makes sure that the padding and border are included in the total width and height of the elements.*/
-    * {
-      box-sizing: border-box;
-    }
 
-    /* Main (super)grid that covers entire page.
+/*Box-sizing-property makes sure that the padding and border are included in the total width and height of the elements.*/
+
+* {
+    box-sizing: border-box;
+}
+
+
+/* Main (super)grid that covers entire page.
     More info on grids can be found here: https://drafts.csswg.org/css-grid/#grid-containers*/
 
-    /* Responsive layout - Mobile, Tablets vs Desktops -
+
+/* Responsive layout - Mobile, Tablets vs Desktops -
     Makes the navigation_bar stack on top of left side bar for mobile and tablet devices..
     On mobile devices the Gadgets section is located below the main content.*/
 
-    /* Grid can be adjusted anytime. Extra sub-grids can be added within gridcells.
+
+/* Grid can be adjusted anytime. Extra sub-grids can be added within gridcells.
     Responsive @media queries can be further explored at https://www.w3schools.com/css/css_rwd_mediaqueries.asp
 
-    /*Mobile*/
-      @media screen and (max-width: 375px) {
-        .grid-super  {
-            display: grid;
-            grid-template-areas:
-                'grid-super_header'
-                'grid-super_middle'
-                'grid-super_left'
-                'grid-super_right_header'
-                'grid-super_right'
-                'grid-super_footer';
-                grid-template-columns: 1fr;
-                grid-template-rows: 50px 1fr 1fr 50px 1fr 50px;
-        }
-    }
-
-    /* Tablets */
-      @media screen and (min-width: 620px) {
-        .grid-super  {
-            display: grid;
-            grid-template-areas:
-                'grid-super_header grid-super_header grid-super_right_header'
-                'grid-super_middle grid-super_middle grid-super_right'
-                'grid-super_left grid-super_left grid-super_right'
-                'grid-super_footer grid-super_footer grid-super_footer';
-                grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 50px 1fr 1fr 50px;
-              }
-            }
-
-    /*Desktop */
-    @media screen and (min-width: 1100px) {
-          .grid-super{
-          display: grid;
-          width: 100%;
-          height: 100%;
-          grid-template-areas:
-    		    "grid-super_left grid-super_header grid-super_header grid-super_right_header"
-    		    "grid-super_left grid-super_middle grid-super_middle grid-super_right"
-    		    "grid-super_footer grid-super_footer grid-super_footer grid-super_footer";
-    		    grid-template-columns: 1fr 1fr 1fr 1fr;
-    		    grid-template-rows: 50px 1fr 50px;
-    		  }
-        }
+    /* Responsive layout - makes a two column-layout instead of four columns */
 
 
-    .grid-super_left {
-        grid-area: grid-super_left;
+/*Mobile*/
+
+@media screen and (max-width: 620px) {
+    .grid-super {
+        display: grid;
+        grid-template-areas: 'grid-super_header' 'grid-super_left' 'grid-super_middle' 'grid-super_right_header' 'grid-super_right' 'grid-super_footer';
+        grid-template-columns: 1fr;
+        grid-template-rows: 50px 1fr 1fr 50px 1fr 50px;
     }
-    .grid-super_header {
-        grid-area: grid-super_header;
+    .column {
+        width: 100%;
     }
-    .grid-super_right_header {
-        grid-area: grid-super_right_header;
-    }
-    .grid-super_right {
-        grid-area: grid-super_right;
-    }
-    .grid-super_middle {
-        grid-area: grid-super_middle;
-    }
-    .grid-super_footer {
-        grid-area: grid-super_footer;
-        position: absolute;
-        left: 0 ; right: 0; bottom: 0;
-        height:[footer-height]
-    }
+}
 
 
-    /* content block layout */
-    .footer-content {
-        grid-area: grid-super_footer;
-        text-align: center;
-        height: 50px;
-        padding: 5px 5px 5px 5px;
-        font-size: 12px;
-    }
+/* Tablets */
 
-    .forecasts {
-        grid-area: grid-super_left;
-        padding: 20px 25px 40px 32px;
-        max-height: 650px;
+@media screen and (min-width: 620px) {
+    .grid-super {
+        display: grid;
+        grid-template-areas: 'grid-super_header grid-super_header grid-super_right_header' 'grid-super_middle grid-super_middle grid-super_right' 'grid-super_left grid-super_left grid-super_right' 'grid-super_footer grid-super_footer grid-super_footer';
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 50px 1fr 1fr 50px;
     }
+}
 
-    .main-content {
-        grid-area: grid-super_middle;
-        padding: 40px 40px 40px 40px;
-        min-width: 250px;
-        max-width: 800px;
+
+/*Desktop */
+
+@media screen and (min-width: 800px) {
+    .grid-super {
+        display: grid;
+        width: 100%;
+        height: 100%;
+        grid-template-areas: "grid-super_left grid-super_header grid-super_header grid-super_right_header" "grid-super_left grid-super_middle grid-super_middle grid-super_right" "grid-super_footer grid-super_footer grid-super_footer grid-super_footer";
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 50px 1fr 50px;
     }
+    .column {
+        width: 50%;
+    }
+}
+
+.grid-super_left {
+    grid-area: grid-super_left;
+}
+
+.grid-super_header {
+    grid-area: grid-super_header;
+}
+
+.grid-super_right_header {
+    grid-area: grid-super_right_header;
+}
+
+.grid-super_right {
+    grid-area: grid-super_right;
+}
+
+.grid-super_middle {
+    grid-area: grid-super_middle;
+}
+
+.grid-super_footer {
+    grid-area: grid-super_footer;
+    height: 50px;
+}
+
+
+/* content block layout */
+
+.footer {
+    grid-area: grid-super_footer;
+    text-align: center;
+    height: 50px;
+    padding: 5px 5px 5px 5px;
+    font-size: 12px;
+}
+
+.forecasts {
+    grid-area: grid-super_left;
+    padding: 20px 25px 40px 32px;
+}
+
+.main-content {
+    grid-area: grid-super_middle;
+    padding: 10px 30px 30px 30px;
+    min-width: 250px;
+    max-width: 800px;
+}
+
+.current_near_available_bikes {
+    grid-area: grid-super_left;
+    padding: 0px 10px 10px 0px;
+    height: auto;
+}
+
+.availability_forecast {
+    grid-area: grid-super_left;
+    padding: 0px 10px 10px 0px;
+    height: auto;
+}
+
+.weather_summary {
+    grid-area: grid-super_left;
+    padding: 0px 10px 10px 0px;
+    height: auto;
+}
+
 
 /* -----------MODULES--------------- */
 
-    /*Inactive navigation-bar used as header. Can be activated when extra pages will be added. */
-    /*Right Header - currently displaying gAdgets */
-    .navigation-bar ul, .right-header ul {
-        top: 0;
-        width: 100%;
-        height: 50px;
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        display: table;
-    }
 
-    .navigation-bar li, .right-header li {
-        display: table-cell;
-        font-size: 18px;
-        text-align: center;
-        text-decoration: none;
-        vertical-align: middle;
-        margin: 0;
-    }
+/*Inactive navigation-bar used as header. Can be activated when extra pages will be added. */
 
 
-    /* Table */
+/*Right Header - currently displaying gAdgets */
 
-        table, th, td {
+.navigation-bar ul,
+.right-header ul {
+    top: 0;
+    width: 100%;
+    height: 50px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: table;
+}
+
+.navigation-bar li,
+.right-header li {
+    display: table-cell;
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    margin: 0;
+}
+
+
+/* Table */
+
+table,
+th,
+td {
     border: 1px solid grey;
     border-collapse: collapse;
     padding: 5px;
-    }
+}
 
-    table tr:nth-child(odd) {
-        background-color: #f1f1f1;
-    }
-    table tr:nth-child(even) {
-        background-color: white;
-    }
+table tr:nth-child(odd) {
+    background-color: #f1f1f1;
+}
+
+table tr:nth-child(even) {
+    background-color: white;
+}
 
 
 /* -------------STATE---------------*/
 
-    /* The status changes involve color only at this time and are included in Theme section for now.
+
+/* The status changes involve color only at this time and are included in Theme section for now.
     If opportune the state and colors can be seperated in different classes later.
     Some properties could also be more efficient grouped together.
     For clear overview and editability it is organized on layout at the moment.
 
 /*-------------THEME----------------*/
 
-	/* All colors are grouped in this section to edit quickly if needed */
 
-    /* General colors */
-
-    p {
-        color: darkgray;
-    }
-
-    h1 {
-        color: black;
-    }
-
-    /* Element colors - Organized by grid */
-    .grid-super_left {
-      color: white;
-        background-color: rgba(0,0,0,0.2);
-    }
-
-            .forecasts {
-                color: black;
-            }
-
-    .grid-super_header {
-      background-color: black;
-      color: #fff;
-    }
-
-            /* Navigation bar coloring - li has no color yet and is commented out but reserved */
-            .navigation-bar ul {
-                    background-color: rgba(0,0,0,0.5);
-            }
-
-            .navigation-bar a {;
-                    color: white;
-            }
-
-            .navigation-bar a:hover {
-                    background-color: #222;
-            }
-
-    .grid-super_right_header {
-      color: white;
-    }
-
-            /* Right Header - currently displaying gAdgets */
-            .right-header ul {
-                    background-color: rgba(0,0,0,0.1);
-            }
-
-            .right-header li {
-                    color: black;
-            }
+/* All colors are grouped in this section to edit quickly if needed */
 
 
-    .grid-super_middle {
-        background-color: #fff;
-        color: black;
-    }
+/* General colors */
 
-            .main-content {
-                color: black;
-                background-color: #fff;
-            }
+p {
+    color: darkgray;
+}
 
-    .grid-super_footer {
-        color: lightgray;
-    }
+h1 {
+    color: black;
+}
+
+
+/* Element colors - Organized by grid */
+
+.grid-super_left {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.forecasts {
+    color: black;
+}
+
+.grid-super_header {
+    background-color: black;
+    color: #fff;
+}
+
+
+/* Navigation bar coloring - li has no color yet and is commented out but reserved */
+
+.navigation-bar ul {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.navigation-bar a {
+    color: white;
+}
+
+.navigation-bar a:hover {
+    background-color: #222;
+}
+
+.grid-super_right_header {
+    color: white;
+}
+
+
+/* Right Header - currently displaying gAdgets */
+
+.right-header ul {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.right-header li {
+    color: black;
+}
+
+.grid-super_middle {
+    background-color: #fff;
+    color: black;
+}
+
+.main-content {
+    color: black;
+    background-color: #fff;
+}
+
+.grid-super_footer {
+    color: lightgray;
+    background-color: black;
+}
+
+.footer p {
+    grid-area: grid-super_footer;
+    color: lightgray;
+}
+
+
+/*-------------SHAME---------------*/
 
 
 /*-------------(P)RESERVED---------------*/
-
-
 
 
 /*
