--- a/templates/index_html_version.html
+++ b/templates/index_html_version.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
 <head>
     <!-- Standard head items -->
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="style.css">
     <!--stylesheet from git.io/normalize normalize.css v3.0.2 | MIT License-->
     <link rel="stylesheet" href="normalize.css" type="text/css">
-  <!-- stylesheet from www.getskeleton.com * Free to use under the MIT license.
-    <link rel="stylesheet" href="skeleton.css"  type="text/css"> -->
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
 </head>
@@ -49,19 +47,34 @@
 
 <!--LEFT-->
         <div class="grid-super_left">
-        <!-- Picture-->
-          <img src="dublin-bikes.jpg" alt="Dublin Bikes" width=100%>
-          <!-- Search block -->
-          <div class="forecasts">
+          
+            <div class="forecasts">
 
-              <h5>Forecasts</h5>
+              <!--NEAREST BIKE SUMMARY-->
+              <div class="current_near_available_bikes">
+              <img src="placeholder.gif" alt="Nearest Bikes; number bikes in 250/500mt" height="80">
+                </div>
+
+              <!--AVAILABILITY FORECAST SUMMARY-->
+              <div class="availability_forecast">
+              <img src="placeholder.gif" alt="Forecasted Availability (per hour)" height="80">
+                </div>
+
+              <!--TODAY'S BIKING WEATHER SUMMARY-->
+              <div class="weather_summary">
+              <img src="placeholder.gif" alt="Today's Weather Summary" height="80">
+                </div>
+
 
                 </div>
             </div>
 
 <!--RIGHT-->
         <div class="grid-super_right">
+
             <!-- Reserved for Ads -->
+                    <!-- Picture-->
+          <img src="ads.jpg" alt="Ads" width=100%>
         </div>
 
 <!--CENTER-->
@@ -70,9 +83,6 @@
           <div class="main-content">
             <div class="plan-trip">
               <h1>Plan your trip</h1>
-                <p>
-
-                  </p>
                     <div id="planTripForm">
                       <!-- Form for user selection -->
 
@@ -91,7 +101,7 @@
                       </form>
 
                       <!-- Picture-->
-                        <img src="maps.jpg" alt="Google Map" width=100%>
+                        <img src="maps.jpg" alt="Google Map">
 
 
                     </div>
@@ -99,19 +109,17 @@
                 <!-- *******link to javascript functions - file to add if needed-->
                 <script src="plan-trip.js">
                 </script>
-
-                </div>
-
+              </div>
             </div>
+          </div>
 
  <!--FOOTER-->
       <div class="grid-super_footer">
-          <div class="footer-content">
+          <div class="footer">
             <p>© Team 9. All rights reserved.</p>
       </div>
             </div>
           </div>
-
 
       <!-- CLOSING LAYOUT-->
       </div>
