Edited style url according to new tree structure

--- a/src/templates/index_html_version.html
+++ b/src/templates/index_html_version.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="favicon.ico" type="x-icon">
 
     <!--Stylesheets-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--stylesheet from git.io/normalize normalize.css v3.0.2 | MIT License-->
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
