--- a/templates/map.html
+++ b/templates/map.html
@@ -1,10 +1,64 @@
-{% extends "layout.html" %}
-{% block content %}
-  <div class="map">
-    <h1>Map</h1>
-      </div>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Bike Map</title>
+<meta name="viewport" content="initial-scale=1.0"> <meta charset="utf-8">
+<style>
+/* Always set the map height explicitly to define the size of the div * element that contains the map. */
+#map {
+height: 100%;
+}
+/* Optional: Makes the sample page fill the window. */ html, body {height: 100%; margin: 0; padding: 0;
+} 
+/* Always set the map height explicitly to define the size of the div
+<style>
+/* Always set the map height explicitly to define the size of the div
+* el*elemeentnthatt ctohntaints ctheomnapt.a*/ins the map. */
 
-    <h2>Using the XMLHttpRequest Object</h2>
+#map { height: 100%; }
+
+/* Optional: Makes the sample page fill the window. */
+}
+
+html, body { 
+  height: 100%;
+  margin: 0; 
+  padding: 0;
+}
+
+</style>
+</head>
+
+
+<body>
+
+{% extends "layout.html" %}
+{% block content1 %}
+
+<div class="grid-super_middle">
+  <div class="main-content">
+    <div class="plan-trip">
+      <h1>Plan your trip</h1>
+
+   <!--from: https://developers.google.com/maps/documentation/javascript/tutorial -->
+          <div id="map"></div>
+            <script>
+              var map;
+              function initMap() {
+                map = new google.maps.Map(document.getElementById('map'), {
+                  center: {lat: -34.397, lng: 150.644},
+                  zoom: 8
+                  }); }
+                  </script>
+                  
+                  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnXdQMLBpjplz_Qvfv316_etKTiO5kV2A&callback=initMap"
+                    async defer>
+                    </script>
+
+
+
+
+  <h2>Using the XMLHttpRequest Object</h2>
 
 <div id="demo">
 <button type="button" onclick="loadXMLDoc()">Change Content</button>
@@ -12,18 +66,46 @@
 
 <script>
 function loadXMLDoc() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("demo").innerHTML =
-      this.responseText;
-    }
-  };
-  xhttp.open("GET", "xmlhttp_info.txt", true);
-  xhttp.send();
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function() {
+  if (this.readyState == 4 && this.status == 200) {
+    document.getElementById("demo").innerHTML =
+    this.responseText;
+  }
+};
+xhttp.open("GET", "xmlhttp_info.txt", true);
+xhttp.send();
 }
 </script>
 
-{% endblock content %}
+            <div id="planTripForm">
+              <!-- Form for user selection -->
 
+              <form>
 
+                  <label for="departureLocation">From: </label>
+                  <input id="departureLocation" type="string" value="">
+                  <br><br>
+
+                  <label for="arrivalLocation">To: </label>
+                  <input id="arrivalLocation" type="string" value="">
+                  <br><br>
+
+                  <!-- submit / search button -->
+                  <button type="button" onclick="">Plan trip</button>
+              </form>
+
+              <!-- Picture-->
+                <img src="maps.jpg" alt="Google Map" width=100%>
+            </div>
+             <!-- *******link to javascript functions - file to add if needed-->
+          <script src="plan-trip.js">
+        </script>
+      </div>
+    </div>
+  </div>            
+
+{% endblock %}
+
+</body>
+</html>
