--- a/templates/index_html_version.html
+++ b/templates/index_html_version.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
-<!-- Layout.html contains html elements that recur on every view.
-We have this file so it needs to be rendered only once.-->
-
-{% block content %}
-{% endblock %}
-           
 <head>
     <!-- Standard head items -->
-    <title>Dublin Bikes Availability Forecast2</title>
+    <title>Dublin Bikes Availability Forecast</title>
     <meta charset="utf-8">
     <meta name="description" content="Dublin Bikes Availability Forecast">
     <meta name="keywords" content="dublin, bikes, availability">
@@ -20,24 +14,20 @@ We have this file so it needs to be rendered only once.-->
     <link rel="icon" href="favicon.ico" type="x-icon">
 
     <!--Stylesheets-->
-    <link rel="stylesheet" href="static/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
     <!--stylesheet from git.io/normalize normalize.css v3.0.2 | MIT License-->
-    <link rel="stylesheet" href="static/normalize.css" type="text/css">
-    <!-- probably redundant stylesheet from www.getskeleton.com * Free to use under the MIT license.
-    <link rel="stylesheet" href="skeleton.css"  type="text/css"> -->
+    <link rel="stylesheet" href="normalize.css" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
+
 <!-- OPENING LAYOUT-->
-  <div class="wrapper">
-  <div class="grid-super">
+      <div class="wrapper">
+      <div class="grid-super">
 
-<!--page view content block comes here?-->
-
-
-  <!-- NAVIGATION -->
+<!-- NAVIGATION -->
         <div class="grid-super_header">
           <div class="navigation-bar">
             <ul>
@@ -46,7 +36,7 @@ We have this file so it needs to be rendered only once.-->
           </div>
         </div>
 
-  <!-- RIGHT - ADS Header -->
+<!-- RIGHT - ADS Header -->
         <div class="grid-super_right_header">
           <div class="right-header">
             <ul>
@@ -55,12 +45,10 @@ We have this file so it needs to be rendered only once.-->
           </div>
         </div>
 
-  <!--LEFT-->
-
+<!--LEFT-->
         <div class="grid-super_left">
-
-          <!-- Search block -->
-          <div class="forecasts">
+          
+            <div class="forecasts">
 
               <!--NEAREST BIKE SUMMARY-->
               <div class="current_near_available_bikes">
@@ -76,36 +64,66 @@ We have this file so it needs to be rendered only once.-->
               <div class="weather_summary">
               <img src="placeholder.gif" alt="Today's Weather Summary" height="80">
                 </div>
+
+
                 </div>
+            </div>
 
-        <!-- Picture-->
-            </div>     
-
-  <!--RIGHT-->
+<!--RIGHT-->
         <div class="grid-super_right">
+
             <!-- Reserved for Ads -->
+                    <!-- Picture-->
+          <img src="ads.jpg" alt="Ads" width=100%>
         </div>
 
-       <!--CENTER-->
-{% block content1 %}
-{% endblock %}
+<!--CENTER-->
+
+        <div class="grid-super_middle">
+          <div class="main-content">
+            <div class="plan-trip">
+              <h1>Plan your trip</h1>
+                    <div id="planTripForm">
+                      <!-- Form for user selection -->
+
+                      <form>
+
+                          <label for="departureLocation">From: </label>
+                          <input id="departureLocation" type="string" value="">
+                          <br><br>
+
+                          <label for="arrivalLocation">To: </label>
+                          <input id="arrivalLocation" type="string" value="">
+                          <br><br>
+
+                          <!-- submit / search button -->
+                          <button type="button" onclick="">Plan trip</button>
+                      </form>
+
+                      <!-- Picture-->
+                        <img src="maps.jpg" alt="Google Map">
 
 
+                    </div>
 
-        
+                <!-- *******link to javascript functions - file to add if needed-->
+                <script src="plan-trip.js">
+                </script>
+              </div>
+            </div>
+          </div>
 
-  <!--FOOTER-->
+ <!--FOOTER-->
       <div class="grid-super_footer">
-          <div class="footer-content">
+          <div class="footer">
             <p>© Team 9. All rights reserved.</p>
       </div>
             </div>
           </div>
 
-  <!-- CLOSING LAYOUT-->
-  </div>
-</div>
+      <!-- CLOSING LAYOUT-->
+      </div>
+    </div>
 
 </body>
-
 </html>
