_ads moved to includes and cleaned redundant html file tags

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,7 +67,7 @@ We have this file so it needs to be rendered only once.-->
 
         <!--RIGHT-->
         <div class="grid-super_right">
-            {% include 'ads.html' %}
+            {% include 'includes/_ads.html' %}
         </div>
 
         <!--FOOTER-->
