Move map to inlcudes

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,8 @@ We have this file so it needs to be rendered only once.-->
 
 <body>
 
-  {% block request_user_location %}{% endblock %}
+  {% block request_user_location %}
+  {% endblock %}
 
   <!-- OPENING LAYOUT-->
   <div class="wrapper">
