--- a/templates/includes/_map.html
+++ b/templates/includes/_map.html
@@ -1,62 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Bike Map</title>
-<meta name="viewport" content="initial-scale=1.0"> <meta charset="utf-8">
-<style>
-/* Always set the map height explicitly to define the size of the div * element that contains the map. */
-#map {
-height: 100%;
-}
-/* Optional: Makes the sample page fill the window. */ html, body {height: 100%; margin: 0; padding: 0;
-} 
+<!--Maps
+
+/* Always set the map height explicitly to define the size of the div element that contains the map. */
+
+
+
+/* Optional: Makes the sample page fill the window. */ 
+
+
+
 /* Always set the map height explicitly to define the size of the div
-<style>
+
 /* Always set the map height explicitly to define the size of the div
-* el*elemeentnthatt ctohntaints ctheomnapt.a*/ins the map. */
+* el*elemeentnthatt ctohntaints ctheomnapt.ins the map. */
 
-#map { height: 100%; }
+/* Optional: Makes the sample page fill the window. */-->
 
-/* Optional: Makes the sample page fill the window. */
-}
-
-html, body { 
-  height: 100%;
-  margin: 0; 
-  padding: 0;
-}
-
-</style>
-</head>
-
-
-<body>
-
-{% extends "layout.html" %}
-{% block content1 %}
-
-<div class="grid-super_middle">
-  <div class="main-content">
     <div class="plan-trip">
       <h1>Plan your trip</h1>
 
    <!--from: https://developers.google.com/maps/documentation/javascript/tutorial -->
-          <div id="map"></div>
             <script>
               var map;
               function initMap() {
-                map = new google.maps.Map(document.getElementById('map'), {
-                  center: {lat: -34.397, lng: 150.644},
-                  zoom: 8
-                  }); }
+                map = new google.maps.Map(document.getElementById('map'), 
+                {
+                  center: {lat: -34.397, lng: 150.644},zoom: 8
+                }); 
+                }
                   </script>
                   
                   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnXdQMLBpjplz_Qvfv316_etKTiO5kV2A&callback=initMap"
                     async defer>
                     </script>
-
-
-
 
   <h2>Using the XMLHttpRequest Object</h2>
 
@@ -102,10 +77,5 @@ xhttp.send();
           <script src="plan-trip.js">
         </script>
       </div>
-    </div>
-  </div>            
 
-{% endblock %}
 
-</body>
-</html>
