--- a/templates/includes/_map.html
+++ b/templates/includes/_map.html
@@ -15,6 +15,17 @@
 
 /* Optional: Makes the sample page fill the window. */-->
 
+
+
+    
+<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=11&center=53.3603%2C-6.3151&key=AIzaSyCHYYR8CVCvuGOzdM-wHwk9qLIBn8WLN5I" allowfullscreen></iframe>
+
+  </body>
+</html>
+
+
+
+
     <div class="plan-trip">
       <h1>Plan your trip</h1>
 
@@ -29,7 +40,7 @@
                 }
                   </script>
                   
-                  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnXdQMLBpjplz_Qvfv316_etKTiO5kV2A&callback=initMap"
+                  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHYYR8CVCvuGOzdM-wHwk9qLIBn8WLN5I&callback=initMap"
                     async defer>
                     </script>
 
@@ -78,4 +89,4 @@ xhttp.send();
         </script>
       </div>
 
-
+    
