--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 {% block request_user_location %}
 <!-- SG: REQUEST ACCESS TO USERs'LOCATION; script snippet copied from: https://github.com/Stephen-P-Murphy/Dublin-Bikes-Availability/tree/master/Dublin%20Bikes%20Web%20App -->
 
+
 <script>
 
 var myCentre; // centre of map
@@ -31,9 +32,10 @@ function getUserLocation() {
 }
 getUserLocation();
 </script>
+
 {% endblock %}
 
-{% block content_forcasts %}
+{% block content_forecasts %}
 
           <!-- Search block -->
           <div class="forecasts">
@@ -64,39 +66,12 @@ getUserLocation();
 
  <!--CENTER-->
  <div class="grid-super_middle">
-    <div class="main-content">
 
         {% include 'includes/_map.html' %}
-      <div class="plan-trip">
-        <h1>Plan your trip</h1>
-          <p>
 
-            </p>
-              <div id="planTripForm">
-                <!-- Form for user selection -->
 
-                <form>
-
-                    <label for="departureLocation">From: </label>
-                    <input id="departureLocation" type="string" value="">
-                    <br><br>
-
-                    <label for="arrivalLocation">To: </label>
-                    <input id="arrivalLocation" type="string" value="">
-                    <br><br>
-
-                    <!-- submit / search button -->
-                    <button type="button" onclick="">Plan trip</button>
-                </form>
-    
-            </div>
-
-            <!-- *******link to javascript functions - file to add if needed-->
-            <script src="plan-trip.js">
-            </script>
-            </div>
-        </div>
     </div>
+
 
 {% endblock %}
 
