--- a/templates/mapclean.html
+++ b/templates/mapclean.html
@@ -1,56 +1,79 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Simple Map</title>
+      <!--Stylesheets-->
+  <link rel="stylesheet" href="static/style.css" type="text/css">
+  <!--stylesheet from git.io/normalize normalize.css v3.0.2 | MIT License-->
+  <link rel="stylesheet" href="static/normalize.css" type="text/css">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 600px;
+      }
+      
+    </style>
+  </head>
+  <body>
 
-<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=11&center=53.3603%2C-6.3151&key=AIzaSyCHYYR8CVCvuGOzdM-wHwk9qLIBn8WLN5I" allowfullscreen></iframe>
+  <!-- OPENING LAYOUT-->
+  <div class="wrapper">
+    <div class="grid-super">
 
+      <!-- NAVIGATION - empty, single bar only-->
+      <div class="grid-super_header">
+        <div class="navigation-bar">
+          <ul>
+            <li>Dublin Bikes Availability Forecast</li>
+          </ul>
+        </div>
+      </div>
 
-<head>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-<meta charset="utf-8">
-<title>Dublin Bikes App</title>
-<script src="jquery-2.2.3.min.js" type="text/javascript"></script>
-<script src="lodash.js"></script>
-<style type="text/css">
-html, body {
-height: 100%;
-margin: 0;
-padding: 0;
-}
-#map {
-height: 65%;
-}
-</style>
-</head>
+      <!--LEFT-->
+      <div class="grid-super_left">
+    </div>
+              <!--CENTER-->
+           <div class="grid-super_middle">
+    <div id="map"></div></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 53.3257802, lng: -6.2691264},
+          zoom: 14
+        });
+      }
+    </script>
 
+        <!-- RIGHT TOP- ADS Header -->
+        <div class="grid-super_right_header">
+          <div class="right-header">
+            <ul>
+              <li>Ads</li>
+            </ul>
+          </div>
+        </div>
 
-<body>
- 
- <script type="text/javascript">
- function initMap() {
- google.charts.load("current", {
-    packages : [ "corechart" ]
-});
+        <!--RIGHT-->
+        <div class="grid-super_right">
+            {% include 'includes/_ads.html' %}
+        </div>
 
-ROOT = window.location.origin;
+        <!--FOOTER-->
+        <div class="grid-super_footer">
+          <div class="footer">
+            <p>© Team 9. All rights reserved.</p>
+          </div>
+        </div>
 
-radius = 20, zoom = 14;
-var centre = {
- lat : 53.346763,
- lng : -6.2568436
- };
- map = new google.maps.Map(document.getElementById('map'), {
-zoom : zoom,
-center : centre
-});
-}
+      <!-- CLOSING LAYOUT-->
+    </div>
+  </div>
 
-</script>
-<script type="text/javascript"
-    src="https://www.gstatic.com/charts/loader.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ AIzaSyCHYYR8CVCvuGOzdM-wHwk9qLIBn8WLN5I }}
-    &amp;callback=initMap"
-type="text/javascript">
-</script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHYYR8CVCvuGOzdM-wHwk9qLIBn8WLN5I&callback=initMap"
+    async defer></script>
 
-</body>
+  </body>
 </html>
