Display website advertiser - right sidebar -iframe

--- a/templates/includes/_ads.html
+++ b/templates/includes/_ads.html
@@ -1,2 +1,3 @@
-   <!-- Add ads below -->
-Reserved for Ads /banner via ads.html include
+   <!-- Add ads below or render website advertiser via iframe-->
+
+<iframe src="https://www.just-eat.ie/" style="border:2px solid lightgrey; height:100%; width:100%;"></iframe>
