--- a/templates/includes/_ads.html
+++ b/templates/includes/_ads.html
@@ -1,3 +1,3 @@
-   <!-- Add ads below or render website advertiser via iframe-->
+<!-- Add ads below or display website advertiser via iframe. Now displaying Just-Eat, which is currently advertising with Dublin Bikes via JCD-->
 
 <iframe src="https://www.just-eat.ie/" style="border:2px solid lightgrey; height:100%; width:100%;"></iframe>
