--- a/templates/includes/_map.html
+++ b/templates/includes/_map.html
@@ -18,7 +18,6 @@
 
     <div id="map"></div>
 
- 
     <script>
       var map;
       function initMap() {
@@ -27,7 +26,7 @@
           zoom: 14
         });
 
-showStationMarkers();
+//showStationMarkers();
 
 //function showStationMarkers(data) {
 //$.getJSON(ROOT + '/stations', null, function(data) {
