--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+      
+  </head>
 <body>
 
 {% extends "layout.html" %}
@@ -11,7 +14,6 @@
 
 var myCentre; // centre of map
 var myarray; // results from Dublin Bikes API
-var map; // variable for maps
 var mapProps; // properties of map
 var marker; // marker on map
 
