Add comments back in map

--- a/templates/includes/_map.html
+++ b/templates/includes/_map.html
@@ -27,21 +27,23 @@
     </style>
   </head>
   <body>
-    <div class="ui grid">
+    <div class="ui grid"> <!--ui grid is an element from the cloud fare library-->
       <!-- <div class="six wide column"></div> -->
       <div class="column">
         <div class="row">
-          <div class="ui action fluid input" id="searchBar">
-            <input type="text" placeholder="Search..." id="searchBox" />
-            <button class="ui button" onclick="search()">Search</button>
+          <div class="ui action fluid input" id="searchBar"> <!--ui action fluid input is from the cloud fare library-->
+            <input type="text" placeholder="Search..." id="searchBox" /> <!--ui button is from the cloud fare library-->
+            <button class="ui button" onclick="search()">Search</button> <!--Xiang uses semantic-ui.com for the UI elements -->
           </div>
         </div>
+         <!--XZ calls it bar becasue it represents a single line-->
         <div class="row" id="mapBar">
           <div id="map"></div>
         </div>
       </div>
     </div>
 
+    <!-- Get current position -->
     <script>
       let map = null
 
@@ -51,20 +53,33 @@
         })
       }
 
+      // creates one new instance of the google maps class, with 'new' in JS.
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
+        //this are objects centre and zoom:
           center: { lat: 53.35014, lng: -6.266155 },
           zoom: 13
         })
       }
 
       function search() {
+// creates the onclick even of the search button
+// 2 options: get the current location or get the address as typed
+// querySelector is similar to get element by id .
+// build in functionality of javascript. Queryselecter can be doen with anything that is a class or id in the css
         const address = document.querySelector('#searchBox').value
         const current = currentLocation(address)
+// VS trick: cursor on currentLocation and press command and you will find the connected element definition
+// current then get the position
 
         current.then(pos => {
+          //after we get the position we center the map to that place.
           map.setCenter(pos)
+          //send the request to our server API
           const url = `/api/v1/bikes?country=ie`
+          //during testing we disable the cache to get only new latest data
+                    // options is just a variable name here for storing the http protocol :
+                    // TIP from Xiang: MDN webdocs: Follow tutorial on HTTP protocol
           const options = {
             method: 'GET',
             cache: 'no-cache',
@@ -73,28 +88,52 @@
               Accept: 'application/json'
             }
           }
+          // JS function that feteches data form the server
+          // we add the api url and the options
+          // Fetch basic concepts from developer.mozilla.org
+          // Add chrome extension Restlet client for REST API testing
 
           fetch(url, options)
             .then(bikes => bikes.json())
             .then(bikes => {
+              // bikes returned from the server
+              // features is used as array in GEO JSON is an array and each element respresents a station
+              // geojson.org describes more about this
+              // you can add any property you like.
+              // start with official documentation. They provide the links with complete descriptions.
+              // try to figure out how to run the example on the local machine first
+              // have a high overview of how the code works and than change
+              // station is the on element of the bikes array with features
               for (station of bikes.features) {
+                //for each one station. des is destination here
+                                   //ex. station.currently.time
+                                    // station.forecast.time
                 const des = {
                   lat: station.geometry.coordinates[0],
                   lng: station.geometry.coordinates[1]
                 }
+                // position is our current position or the typed address. destination is the coordinate for the station
 
                 if (distanceWithin(pos, des, 10000)) {
+                // check out sementic ui documentation for adding extra steps
+                //calculates how the distance from the source and destination. within 1 km.
+                // creates the markers. We create a new instance for the markers and bind it to the map
+                // google uses LatLng constructor
                   const latLng = new google.maps.LatLng(des.lat, des.lng)
+                  // constant marker, new instance of marker
                   const marker = new google.maps.Marker({
-                    position: latLng,
-                    map: map,
-                    info: station.properties
+                    position: latLng, //coordinates
+                    map: map, // we put a map over the map
+                    info: station.properties // include our properties. info is the name that we gave there.
                   })
                 }
               }
             })
         })
       }
+// We need to start the server to show the markers on the map.
+// We need to install something for now untill we have a script to start it.
+// NodeJs is easiest
 
       function distanceWithin(src, des, range) {
         const toRadians = degree => {
